# guideu

./: .editorconfig  .env.example  .gitignore  Makefile  README.md  SPRINT_STATUS.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml
services/analytics-engine/: .gitignore  Dockerfile  README.md  pyproject.toml  registry.py
services/analytics-engine/app/: config.py  deps.py  main.py
services/analytics-engine/app/api/: guides.py  health.py  pricing.py  recommendations.py  scam.py
services/analytics-engine/app/schemas/: guides.py  pricing.py  recommendations.py  scam.py
services/analytics-engine/artifacts/: .gitkeep
services/analytics-engine/data/: loader.py
services/analytics-engine/evaluation/: fairness.py  metrics.py
services/analytics-engine/features/: recommender.py  scam.py
services/analytics-engine/inference/: guides.py  pricing.py  recommender.py  scam.py
services/analytics-engine/tests/: conftest.py  test_health.py  test_inference.py
services/analytics-engine/training/: run_all.py  train_recommender.py  train_scam.py
services/core-engine/: .dockerignore  Dockerfile  README.md  conftest.py  main.py  pyproject.toml
services/core-engine/config/: __init__.py  celery.py  settings.py  urls.py  views.py
services/core-engine/config/settings/: __init__.py  base.py  dev.py  prod.py
services/core-engine/src/analytics/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
services/core-engine/src/audit/: admin.py  apps.py  middleware.py  models.py
services/core-engine/src/authentication/: __init__.py  admin.py  apps.py  models.py  permissions.py  serializers.py  signals.py  urls.py  views.py
services/core-engine/src/bookings/: __init__.py  admin.py  apps.py  models.py  serializers.py  signals.py  tasks.py  urls.py  views.py
services/core-engine/src/catalog/: admin.py  apps.py  filters.py  (+5 more)
services/core-engine/tests/: test_e2e_journeys.py
(+330 files in other folders)
