[project]
name = "analytics-engine"
version = "0.1.0"
description = "GuideU ML & analytics service — anti-scam scoring, recommendations, guide ranking, price benchmarking (FastAPI)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.5.0",
    "joblib>=1.4.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
# Heavy, optional capabilities — the service boots and serves without them.
tracking = ["mlflow>=2.16.0"]
deep = ["torch>=2.2.0"]
mongo = ["motor>=3.5.0"]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-ra"
testpaths = ["tests"]

[tool.uv]
package = false
